force-app/main/default/objects/AAR_Evaluation__c/AAR_Evaluation__c.object-meta.xml
<CustomObject>
    <label>AAR Evaluation</label>
    <nameField>
        <displayFormat>EVAL-{0000}</displayFormat>
        <label>Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Evaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>