force-app/main/default/objects/AAR_Evaluation__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AAR Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>AAR Evaluations</relationshipLabel>
    <relationshipName>AAR_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>