force-app/main/default/objects/AAR_Evaluation__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <label>Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>