force-app/main/default/objects/AAR_Evaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAR Evaluations</relationshipLabel>
    <relationshipName>AAR_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>