force-app/main/default/objects/AAR_Evaluation__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceptional Performance</fullName>
            </value>
            <value>
                <fullName>Successful Performance</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>