force-app/main/default/objects/AAR_Evaluation__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>