force-app/main/default/objects/AAR_Evaluation__c/validationRules/VR_Comment_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Comment_Required_On_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  ISBLANK(Strengths__c),
  ISBLANK(Concerns__c),
  ISBLANK(Recommendations__c)
)</errorConditionFormula>
    <errorMessage
  >At least one comment field (Strengths, Concerns, or Recommendations) is required before submitting.</errorMessage>
</ValidationRule>