force-app/main/default/objects/AAR_Evaluation__c/validationRules/VR_Lock_After_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lock_After_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Status__c), 'Submitted'),
  OR(
    ISCHANGED(Rating__c),
    ISCHANGED(Strengths__c),
    ISCHANGED(Concerns__c),
    ISCHANGED(Recommendations__c)
  )
)</errorConditionFormula>
    <errorMessage
  >Rating and comment fields are locked once the evaluation is submitted and cannot be modified.</errorMessage>
</ValidationRule>