force-app/main/default/objects/AAR_Evaluation__c/validationRules/VR_Rating_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Rating_Required_On_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, 'Submitted'),
  ISPICKVAL(Rating__c, '')
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage
  >Rating is required before submitting evaluation.</errorMessage>
</ValidationRule>